--- a/_includes/aboutus.html
+++ b/_includes/aboutus.html
@@ -5,7 +5,7 @@
                 <h2 class="section-heading">About Me</h2>
                 <hr class="light">
                 <p class=>I am a creative Photographer. I like to photograph people, places and things.</p> 
-                <p>Babita Shekhawat has an illustrious track record spanning over more than a decade of successfully undertaking air diving, mixed-gas bounce diving and salvage operation in support of complex projects. We specialize in salvage operations throughout India and have a success rate of 100% in salvage operations.</p>
+                <p>Babita Shekhawat has an illustrious track record spanning over more than a decade of successfully undertaking </p>
                 <a href="#services" class="btn btn-default btn-xl wow tada page-scroll">Services</a>
             </div>
         </div>
