--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -7,6 +7,8 @@
                 <p>
                     Ready to start your next project with us?<br>
                     That's great! Give us a call or send us an email and we will get back to you as soon as possible!
+                    <h2 class="section-heading">Proprietor: Babita Shekhawat</h2>
+                    <h4 class="section-heading">Manager: Babita Shekhawat</h4>
                 </p>
            </div>
         </div>
@@ -16,26 +18,25 @@
                 Shop No.4, Ruby Mansion,<br>
                 Behind Metro Cinema,<br>
                 Barrak Road,<br>
-                Mumbai - 400 020.
+                Mumbai - 400 020,<br>
+                Maharashtra,<br>
+                India.
             </div>
             <div class="col-lg-3">
                 <h4>Corrospondence Office</h4>
                 A-241, Kalpataru Towers,<br>
                 Opp. Esis Hospital, Akurli Road,<br>
                 Kandivali East,<br>
-                Mumbai - 400 101.
+                Mumbai - 400 101,<br>
+                Maharashtra,<br>
+                India.
             </div>
         </div>  
         <div class="row text-center">
             <div class="col-lg-8 col-lg-offset-2">
-                <h4>Telephone</h4>
-                <a href="tel:+919930502278">+91 9930502278</a>
-            </div>
-        </div>
-        <div class="row text-center">
-            <div class="col-lg-8 col-lg-offset-2">
                 <h4>Email</h4>
-                <a href="mailto:info@babitashekhawat.me">info@babitashekhawat.me</a><br>
+                <!--<a href="mailto:info@shivamarinesalvorsandengineers.com">info@shivamarinesalvorsandengineers.com</a><br>-->
+                <a href="babitashekhawat30aug@gmail.com">babitashekhawat30aug@gmail.com</a>
             </div>
         </div> 
     </div>
