--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,10 +6,10 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Babita Shekhawat</title>
-
+    <title>SMSE</title>
+    
     <!-- favicon -->
-  <link rel="shortcut icon" href="{{ "/img/favicon.ico" | prepend: site.baseurl }}">
+    <link rel="shortcut icon" href="{{ "/img/favicon.ico" | prepend: site.baseurl }}">
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -31,5 +31,15 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114362113-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-114362113-1');
+    </script>
+
 
 </head>
