--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,11 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>Babita Shekhawat</h1>
+        	 <!--<img src="img/logo.png" alt="HTML5 Icon" style="width:600px;height:400px;">-->
+            <h1>Shiva Marine<br> Salvors & Engineers</h1>
             <hr>
-            <p>Exploring is motivation</p>
-            <a href="#about" class="btn btn-primary btn-xl wow tada page-scroll">About Me</a>
+            <p>We undertake all types of underwater jobs such as Cutting, Welding, Videography, Photography, Civil Engineering, Laying of Pipelines, Salvage, etc.</p>
+            <a href="#about" class="btn btn-primary btn-xl wow tada page-scroll">About us</a>
         </div>
     </div>
 </header>
