--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -3,92 +3,38 @@
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                GOA
-                            </div>
-                            <div class="project-name">
-                                Riverprincess
-                            </div>
-                        </div>
-                    </div>
+                    <img src="img/portfolio/1.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
+                    
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Karwar
-                            </div>
-                            <div class="project-name">
-                                Himmmat
-                            </div>
-                        </div>
-                    </div>
+                    <img src="img/portfolio/2.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
+                    
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/3.jpg" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                SMSE
-                            </div>
-                            <div class="project-name">
-                                Mumbai
-                            </div>
-                        </div>
-                    </div>
+                    <img src="img/portfolio/3.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
+                   
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                SMSE
-                            </div>
-                            <div class="project-name">
-                                Mumbai
-                            </div>
-                        </div>
-                    </div>
+                    <img src="img/portfolio/4.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
+                  
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/5.jpg" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                SMSE
-                            </div>
-                            <div class="project-name">
-                                Mumbai
-                            </div>
-                        </div>
-                    </div>
+                    <img src="img/portfolio/5.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
+                   
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/6.jpg" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                SMSE
-                            </div>
-                            <div class="project-name">
-                                Mumbai
-                            </div>
-                        </div>
-                    </div>
+                    <img src="img/portfolio/6.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
+                    
                 </a>
             </div>
         </div>
