--- a/_includes/services.html
+++ b/_includes/services.html
@@ -8,74 +8,31 @@
         </div>
     </div>
    
-
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-             <iframe src="https://player.vimeo.com/video/201989635"   
-             width="640" height="360" frameborder="0" ></iframe>
-             <iframe src="https://player.vimeo.com/video/{{ 201989635 }}" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-            <iframe width="640" height="360" src="https://www.youtube.com/embed/wHf2wWjB0-0?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-             </div>
-        </div>
-    </div>
-
-
     <div class="container">
         <div class="row">
              <h2><p>Shiva Marine Salvors and Engineers has exceptionally maintained equipment and expertly-trained and experienced personnel to handle any underwater task. We provide custom shallow air, deep air and mixed gas dive packages that can handle “Anything, Anytime, Anywhere.”</p>
              <p> We have a proven ability and an excellent reputation in problem-solving in our diving services. Our aim is to complete the underwater task-at-hand better, faster and safer than our competitors.</p>
-             <div class="col-lg-3 col-md-6 text-center">
-             <p>Our services include: </p>
-             </div>
              </h2>
-               
-            </div>
-        </div>
+         </div>
     </div>
-     
+    
     <div class="container">
         <div class="row">
-            <div class="col-lg-3 col-md-6 text-left">
-                <div class="service-box">
-                    <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                    <h3>Our services include:</h3>
-                    <p class="text-muted">Ship’s Salvage</p>
-                    <p>Underwater welding and cutting</p>
-                    <p>Maintenance of ship’s and harbor works</p>
-                    <p>Laying of pipe line in the river and sea including repairs.</p>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 text-left">
-                <div class="service-box">
-                     <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                    <h3>Our services include:</h3>
-                    <p class="text-muted">Dredging Dams harbor and river beds</p>
-                    <p>Underwater survey and inspection</p>
-                    <p>Underwater video and still photography</p>
-                   
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 text-left">
-                <div class="service-box">
-                    <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                    <h3>Our services include:</h3>
-                    <p class="text-muted">Demolition painting of masonry dams upstream face</p>
-                    <p>Underwater concreting and repairing old structures</p>
-                    <p>Block placing construction of jetty, wharfs</p>
-                   
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 text-left">
-                <div class="service-box">
-                    <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                    <h3>Our services include:</h3>
-                    <p class="text-muted">Sinking of casing wells and foundation of jetties and bridges</p>
-                    <p>Underwater grouting with polymerizes cement and epoxy based materials</p>
-                    <p>Underwater hull cleaning</p>
-                </div>
-            </div>
+             <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
+             <h3>Our services include:</h3>
+            <p class="text-muted">Ship’s Salvage</p>
+            <p>Underwater hull cleaning</p>
+            <p>Underwater welding and cutting</p>
+            <p>Underwater survey and inspection</p>
+            <p>Dredging Dams harbor and river beds</p>
+            <p>Underwater video and still photography</p>
+            <p>Maintenance of ship’s and harbor works</p>
+            <p>Block placing construction of jetty, wharfs</p>
+            <p>Underwater concreting and repairing old structures</p>
+            <p>Demolition painting of masonry dams upstream face</p>
+            <p>Laying of pipe line in the river and sea including repairs.</p>
+            <p>Sinking of casing wells and foundation of jetties and bridges</p>
+            <p>Underwater grouting with polymerizes cement and epoxy based materials</p>
         </div>
     </div>
-    <img src="https://drive.google.com/open?id=1UkkzZBJMI6rF48aLfhPfM8L4Paage--R" class="img-responsive" alt="">
 </section>
