--- a/_includes/summary.html
+++ b/_includes/summary.html
@@ -1,6 +1,6 @@
   <aside class="bg-dark">
       <div class="container text-center">
-          <h2>We Undertake all type of underwater jobs, Cutting, Welding, Videography, Photography, Civil Engineering, Lying of Pipeline & Salvage, etc.</h2>
+          <h2>We undertake all types of underwater jobs such as Cutting, Welding, Videography, Photography, Civil Engineering, Laying of Pipelines, Salvage, etc.</h2>
                         
       </div>
   </aside>
