--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -13,7 +13,7 @@
   {% include contact.html %}
   {% include footer.html %}
   {% include scripts.html %}
-  {% include images.html %}
+  {% include analytics.html %}
 </body>
 
 </html>
