--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SMSE</title>
+    <title>BS</title>
     
     <!-- favicon -->
     <link rel="shortcut icon" href="{{ "/img/favicon.ico" | prepend: site.baseurl }}">
