--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -11,14 +11,14 @@
             <a class="navbar-brand page-scroll" href="#page-top">
                    <span><img id="nav-smse" class="png" src={{"/img/smse.png" oncontextmenu="return false;" | prepend: site.baseurl}} height="30" alt="SMSE Logo"/></span>
             </a>
-            <a class="navbar-brand page-scroll" href="#page-top">Shiva Marine Salvors & Engineers</a>
+            <a class="navbar-brand page-scroll" href="#page-top">Babita Shekhawat</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a class="page-scroll" href="#about">About Us</a>
+                    <a class="page-scroll" href="#about">About Me</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#services">Services</a>
