--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                Copyright © Shiva Marine Salvors & Engineers
+                Copyright © Babita Shekhawat
             </div>
         </div>
     </div>
