--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -7,7 +7,7 @@
                 <p>
                     Ready to start your next project with us?<br>
                     That's great! Give us a call or send us an email and we will get back to you as soon as possible!
-                    <h2 class="section-heading">Proprietor: Babita Shekhawat</h2>
+                    <h2 class="section-heading">Babita Shekhawat</h2>
                 </p>
            </div>
         </div>
