--- a/_includes/services.html
+++ b/_includes/services.html
@@ -23,7 +23,7 @@
              <h3>Education and Qualifications</h3>
             <p class="text-muted">Bachelor of Commerce</p>
             <p>Masters of Commerce</p>
-            <p>Masters of Mamangement Studies</p>
+            <p>Masters of Management Studies</p>
             <p>L.L.B</p>
             
         </div>
