--- a/_includes/aboutus.html
+++ b/_includes/aboutus.html
@@ -4,8 +4,8 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">About Me</h2>
                 <hr class="light">
-                <p class=>I am a creative Photographer. I like to photograph people, places and things.</p> 
-                <p>Babita Shekhawat has an illustrious track record spanning over more than a decade of successfully undertaking </p>
+                <p class=>Hello. I'm Babita Shekhawat, a Graphic Designer.  I am a passionate self-taught graphic designer.</p> 
+                <p>I enjoy working with peers and look forward to meeting new people in all prospective work environments. </p>
                 <a href="#services" class="btn btn-default btn-xl wow tada page-scroll">Services</a>
             </div>
         </div>
