--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -35,7 +35,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h4>Email</h4>
                 <!--<a href="mailto:info@shivamarinesalvorsandengineers.com">info@shivamarinesalvorsandengineers.com</a><br>-->
-                <a href="babitashekhawat30aug@gmail.com">babitashekhawat30aug@gmail.com</a>
+                <a href="babitashekhawatgraphicdesigner@gmail.com">babitashekhawatgraphicdesigner@gmail.com</a>
             </div>
         </div> 
     </div>
