--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
             <h1>Babita Shekhawat</h1>
             <hr>
             <p>We undertake all types of designing work.</p>
-            <a href="#about" class="btn btn-primary btn-xl wow tada page-scroll">About us</a>
+            <a href="#about" class="btn btn-primary btn-xl wow tada page-scroll">About Me</a>
         </div>
     </div>
 </header>
