--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -6,8 +6,8 @@
 <body id="page-top">
   {% include nav.html %}
   {% include header.html %}
-  {% include aboutus.html %}
-  {% include services.html %}
+  {% include aboutme.html %}
+  {% include education.html %}
   {% include portfolio.html %}
   {% include summary.html %}
   {% include contact.html %}
