--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -6,7 +6,7 @@
                 <hr class="light">
                 <p class=>Hello. I'm Babita Shekhawat, a Graphic Designer.  I am a passionate self-taught graphic designer.</p> 
                 <p>I enjoy working with peers and look forward to meeting new people in all prospective work environments. </p>
-                <a href="#services" class="btn btn-default btn-xl wow tada page-scroll">Services</a>
+                <a href="#services" class="btn btn-default btn-xl wow tada page-scroll">Education</a>
             </div>
         </div>
     </div>
