--- a/_includes/education.html
+++ b/_includes/education.html
@@ -22,7 +22,8 @@
         <div class="row">
              <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
              <h3>Skill Set</h3>
-            <p class="text-muted">Adobe Creative Suite:  Indesign, Illustrator, Photoshop, After Effects, Premiere Pro.</p>
+            <p class="text-muted"></p>
+            <p>Adobe Creative Suite:  Indesign, Illustrator, Photoshop, After Effects, Premiere Pro.</p>
             <p>Microsoft applications:  Word, Excel, Powerpoint.</p>
             <p>Storage platforms:  Dropbox, Google Drive.</p>
             
