--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,7 +9,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand page-scroll" href="#page-top">
-                   <span><img id="nav-smse" class="png" src={{"/img/smse.png" oncontextmenu="return false;" | prepend: site.baseurl}} height="30" alt="SMSE Logo"/></span>
+                   <span><img id="nav-bs" class="png" src={{"/img/bs.png" oncontextmenu="return false;" | prepend: site.baseurl}} height="30" alt="BS Logo"/></span>
             </a>
             <a class="navbar-brand page-scroll" href="#page-top">Babita Shekhawat</a>
         </div>
