--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -4,9 +4,9 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">About Me</h2>
                 <hr class="light">
-                <p class=>Hello. I'm Babita Shekhawat, a Graphic Designer.  I am a passionate self-taught graphic designer.</p> 
-                <p>I enjoy working with peers and look forward to meeting new people in all prospective work environments. </p>
-                <a href="#services" class="btn btn-default btn-xl wow tada page-scroll">Education</a>
+                <p class=>Hello. I am Babita Shekhawat.  I am a passionate self-taught graphic designer.</p> 
+                <p></p>
+                <a href="#services" class="btn btn-default btn-xl wow tada page-scroll">My Work</a>
             </div>
         </div>
     </div>
