--- a/_includes/education.html
+++ b/_includes/education.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Education</h2>
+                <h2 class="section-heading">My Work</h2>
                 <hr class="primary">
             </div>
         </div>
@@ -10,10 +10,10 @@
    
     <div class="container">
         <div class="row">
-             <h2><p>Bachelor of Commerce</p>
-             <p>Masters of Commerce</p>
-             <p>Masters of Management Studies</p>
-             <p>L.L.B</p>
+             <h2><p></p>
+             <p></p>
+             <p></p>
+             <p></p>
              </h2>
          </div>
     </div>
@@ -21,11 +21,11 @@
     <div class="container">
         <div class="row">
              <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-             <h3>Skill Set</h3>
+             <h3></h3>
             <p class="text-muted"></p>
-            <p>Adobe Creative Suite:  Indesign, Illustrator, Photoshop, After Effects, Premiere Pro.</p>
-            <p>Microsoft applications:  Word, Excel, Powerpoint.</p>
-            <p>Storage platforms:  Dropbox, Google Drive.</p>
+            <p></p>
+            <p></p>
+            <p></p>
             
         </div>
     </div>
