--- a/_includes/summary.html
+++ b/_includes/summary.html
@@ -1,6 +1,6 @@
   <aside class="bg-dark">
       <div class="container text-center">
-          <h2>We undertake all types of designing jobs such as Books, magazines, catalogs, newspapers, letterhead, business cards, brand guides, logos, flyers, brochures, postcards, one-sheets, posters, Product packaging and labels, Presentations, Shirt & Apparel designs, Reports, Illustrations & clip-art, photo editing, video editing,  etc.</h2>
+          <h2>I undertake all types of designing jobs.</h2>
                         
       </div>
   </aside>
