--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -5,8 +5,8 @@
                 <h2 class="section-heading">Contact</h2>
                 <hr class="primary">
                 <p>
-                    Ready to start your next project with us?<br>
-                    That's great! Give us a call or send us an email and we will get back to you as soon as possible!
+                    Ready to start your next project with me?<br>
+                    That's great! Give me a call or send me an email and I will get back to you as soon as possible!
                     <h2 class="section-heading">Babita Shekhawat</h2>
                 </p>
            </div>
