--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -21,7 +21,7 @@
                     <a class="page-scroll" href="#about">About Me</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#services">Education</a>
+                    <a class="page-scroll" href="#services">My Work</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#portfolio">Portfolio</a>
