--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -186,7 +186,7 @@ header {
             }
             p {
                 font-weight: 400;
-                color: rgba(white, 1);
+                color: rgba(gold, 1);
                 font-size: 16px;
                 margin-bottom: 50px;
                 text-shadow:
