--- a/_includes/education.html
+++ b/_includes/education.html
@@ -12,7 +12,7 @@
         <div class="row">
              <h2><p></p>
              <p><iframe width="560" height="315" src="https://www.youtube.com/embed/RFJM3z3_t_k" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></p>
-             <p></p>
+             <p><iframe width="560" height="315" src="https://www.youtube.com/embed/XEiT_O3e0VM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></p>
              <p></p>
              </h2>
          </div>
