--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -37,7 +37,12 @@
                     
                 </a>
             </div>
-           
+            <div class="col-lg-4 col-sm-6">
+                <a href="#" class="portfolio-box">
+                    <img src="img/portfolio/7.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
+                   
+                </a>
+            </div>
         </div>
     </div>
 </section>
