video responsive aspect ratio

--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -38,40 +38,40 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/RFJM3z3_t_k" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <div class="portfolio-box video-container">
+                    <iframe src="https://www.youtube.com/embed/RFJM3z3_t_k" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                    
-                </a>
+                </div>
             </div>
              <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/XEiT_O3e0VM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <div class="portfolio-box video-container">
+                    <iframe src="https://www.youtube.com/embed/XEiT_O3e0VM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                    
-                </a>
+                </div>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/lO0Ro34Efwk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <div class="portfolio-box video-container">
+                    <iframe src="https://www.youtube.com/embed/lO0Ro34Efwk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                    
-                </a>
+                </div>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/okVnp8Nt_UQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <div class="portfolio-box video-container">
+                    <iframe src="https://www.youtube.com/embed/okVnp8Nt_UQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                    
-                </a>
+                </div>
             </div>
              <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/05UL1OHWOgc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <div class="portfolio-box video-container">
+                    <iframe src="https://www.youtube.com/embed/05UL1OHWOgc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                    
-                </a>
+                </div>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/05UL1OHWOgc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <div class="portfolio-box video-container">
+                    <iframe src="https://www.youtube.com/embed/05UL1OHWOgc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                    
-                </a>
+                </div>
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
