--- a/css/main.scss
+++ b/css/main.scss
@@ -50,7 +50,7 @@ $theme-dark: #222;
 	}
 }
 
-//this is for video
+//this is for video to make height proper
 .video-container {
     position: relative;
     padding-bottom: 56.25%;
