--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,48 +1,61 @@
-<section class="no-padding" id="portfolio">
+<section class="no-padding bg-black" id="portfolio">
     <div class="container-fluid">
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/1.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
+                    <img src="https://imgur.com/6YzKkcz.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
                     
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/2.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
+                    <img src="https://imgur.com/c32Kcq5.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
                     
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/3.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
+                    <img src="https://imgur.com/8CQ54RG.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
                    
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/4.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
+                    <img src="https://imgur.com/s5JAoTx.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
                   
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/5.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
+                    <img src="https://imgur.com/WlnloiG.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
                    
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/6.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
+                    <img src="https://imgur.com/IvxpLvg.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
                     
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
+                <a href="#" class="portfolio-box">
+                    <img src="https://imgur.com/DiRA4J1.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
+                   
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a href="#" class="portfolio-box">
+                    <img src="https://imgur.com/16mfOT1.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
+                   
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
                 <div class="portfolio-box video-container">
-                    <iframe src="https://www.youtube.com/embed/RFJM3z3_t_k" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/okVnp8Nt_UQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                    
                 </div>
             </div>
+            
              <div class="col-lg-4 col-sm-6">
                 <div class="portfolio-box video-container">
                     <iframe src="https://www.youtube.com/embed/XEiT_O3e0VM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
@@ -57,7 +70,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <div class="portfolio-box video-container">
-                    <iframe src="https://www.youtube.com/embed/okVnp8Nt_UQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/RFJM3z3_t_k" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                    
                 </div>
             </div>
@@ -67,24 +80,8 @@
                    
                 </div>
             </div>
-            <div class="col-lg-4 col-sm-6">
-                <div class="portfolio-box video-container">
-                    <iframe src="https://www.youtube.com/embed/05UL1OHWOgc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                   
-                </div>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/7.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
-                   
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/8.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
-                   
-                </a>
-            </div>
+            
+            
         </div>
     </div>
 </section>
