--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -51,6 +51,11 @@ p {
     color: white;
 }
 
+.bg-black {
+    background-color: black;
+    color: white;
+}
+
 .text-faded {
     color: rgba(white, .7);
 }
