--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -160,7 +160,7 @@ header {
     min-height: auto;
     @include background-cover;
     background-position: center;
-    background-image: url('../img/header.jpg');
+    background-image: url('https://i.imgur.com/ll4jaZH.png');
     //background-size: contain;
     //padding-top: 65.68%;
     text-align: center;
