--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,7 @@
     <title>BS</title>
     
     <!-- favicon -->
-    <link rel="shortcut icon" href="{{ "/img/favicon.ico" | prepend: site.baseurl }}">
+    <link rel="shortcut icon" href="{{ "https://i.imgur.com/uUZmeOX.png" | prepend: site.baseurl }}">
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
