--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -3,50 +3,56 @@
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="https://imgur.com/6YzKkcz.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
+                    <img src="https://imgur.com/6YzKkcz.jpg"  class="img-responsive" alt="">
                     
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="https://imgur.com/c32Kcq5.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
+                    <img src="https://imgur.com/c32Kcq5.jpg"  class="img-responsive" alt="">
                     
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="https://imgur.com/8CQ54RG.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
+                    <img src="https://imgur.com/8CQ54RG.jpg"  class="img-responsive" alt="">
                    
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="https://imgur.com/s5JAoTx.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
+                    <img src="https://imgur.com/s5JAoTx.jpg"  class="img-responsive" alt="">
                   
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="https://imgur.com/WlnloiG.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
+                    <img src="https://imgur.com/WlnloiG.jpg"  class="img-responsive" alt="">
                    
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="https://imgur.com/IvxpLvg.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
+                    <img src="https://imgur.com/IvxpLvg.jpg"  class="img-responsive" alt="">
                     
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="https://imgur.com/DiRA4J1.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
+                    <img src="https://i.imgur.com/neDE9IM.jpg"  class="img-responsive" alt="">
                    
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="https://imgur.com/16mfOT1.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
+                    <img src="https://imgur.com/16mfOT1.jpg"  class="img-responsive" alt="">
                    
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a href="#" class="portfolio-box">
+                    <img src="https://i.imgur.com/Ef40en2.gif"  width="500" height="377" >
+                    
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
@@ -64,6 +70,12 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <div class="portfolio-box video-container">
+                    <iframe src="https://www.youtube.com/embed/05UL1OHWOgc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                   
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <div class="portfolio-box video-container">
                     <iframe src="https://www.youtube.com/embed/lO0Ro34Efwk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                    
                 </div>
@@ -74,18 +86,19 @@
                    
                 </div>
             </div>
-             <div class="col-lg-4 col-sm-6">
-                <div class="portfolio-box video-container">
-                    <iframe src="https://www.youtube.com/embed/05UL1OHWOgc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                   
-                </div>
-            </div>
-             <div class="col-lg-4 col-sm-6">
+            <div class="col-lg-4 col-sm-6">
                 <div class="portfolio-box video-container">
                     <iframe src="https://www.youtube.com/embed/nPhVGu1m13U" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                    
                 </div>
             </div>
+            <div class="col-lg-4 col-sm-6">
+                <div class="portfolio-box video-container">
+                    <iframe src="https://www.youtube.com/embed/BqA7VNamXpU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                   
+                </div>
+            </div>
+            
         </div>
     </div>
 </section>
