--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -33,7 +33,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="https://imgur.com/IvxpLvg.jpg"  class="img-responsive" alt="">
+                    <img src="https://i.imgur.com/JIXdMeT.jpg"  class="img-responsive" alt="">
                     
                 </a>
             </div>
