--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -46,6 +46,12 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
+                    <img src="https://i.imgur.com/JIXdMeT.jpg"  class="img-responsive" alt="">
+                    
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a href="#" class="portfolio-box">
                     <img src="https://i.imgur.com/Ef40en2.gif"  width="500" height="377" >
                     
                 </a>
