--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -2,59 +2,59 @@
     <div class="container-fluid">
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
+                <div class="portfolio-box">
                     <img src="https://imgur.com/6YzKkcz.jpg"  class="img-responsive" alt="">
                     
-                </a>
+                </div>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
+                <div class="portfolio-box">
                     <img src="https://imgur.com/c32Kcq5.jpg"  class="img-responsive" alt="">
                     
-                </a>
+                </div>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
+                <div class="portfolio-box">
                     <img src="https://imgur.com/8CQ54RG.jpg"  class="img-responsive" alt="">
                    
-                </a>
+                </div>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
+                <div class="portfolio-box">
                     <img src="https://imgur.com/s5JAoTx.jpg"  class="img-responsive" alt="">
                   
-                </a>
+                </div>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
+                <div class="portfolio-box">
                     <img src="https://imgur.com/WlnloiG.jpg"  class="img-responsive" alt="">
                    
-                </a>
+                </div>
             </div>
           
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
+                <div class="portfolio-box">
                     <img src="https://i.imgur.com/neDE9IM.jpg"  class="img-responsive" alt="">
                    
-                </a>
+                </div>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
+                <div class="portfolio-box">
                     <img src="https://imgur.com/16mfOT1.jpg"  class="img-responsive" alt="">
                    
-                </a>
+                </div>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
+                <div class="portfolio-box">
                     <img src="https://i.imgur.com/JIXdMeT.jpg"  class="img-responsive" alt="">
                     
-                </a>
+                </div>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
+                <div class="portfolio-box">
                     <img src="https://i.imgur.com/Ef40en2.gif"  width="500" height="377" >
                     
-                </a>
+                </div>
             </div>
             <div class="col-lg-4 col-sm-6">
                 <div class="portfolio-box video-container">
