--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -2,100 +2,100 @@
     <div class="container-fluid">
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
-                <div class="portfolio-box">
-                    <img src="https://imgur.com/6YzKkcz.jpg"  class="img-responsive" alt="">
+                <div class="">
+                    <img src="https://imgur.com/6YzKkcz.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
                     
                 </div>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <div class="portfolio-box">
-                    <img src="https://imgur.com/c32Kcq5.jpg"  class="img-responsive" alt="">
+                <div class="">
+                    <img src="https://imgur.com/c32Kcq5.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
                     
                 </div>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <div class="portfolio-box">
-                    <img src="https://imgur.com/8CQ54RG.jpg"  class="img-responsive" alt="">
+                <div class="">
+                    <img src="https://imgur.com/8CQ54RG.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
                    
                 </div>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <div class="portfolio-box">
-                    <img src="https://imgur.com/s5JAoTx.jpg"  class="img-responsive" alt="">
+                <div class="">
+                    <img src="https://imgur.com/s5JAoTx.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
                   
                 </div>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <div class="portfolio-box">
-                    <img src="https://imgur.com/WlnloiG.jpg"  class="img-responsive" alt="">
+                <div class="">
+                    <img src="https://imgur.com/WlnloiG.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
                    
                 </div>
             </div>
           
             <div class="col-lg-4 col-sm-6">
-                <div class="portfolio-box">
-                    <img src="https://i.imgur.com/neDE9IM.jpg"  class="img-responsive" alt="">
+                <div class="">
+                    <img src="https://i.imgur.com/neDE9IM.jpg" oncontextmenu="return false;" zclass="img-responsive" alt="">
                    
                 </div>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <div class="portfolio-box">
-                    <img src="https://imgur.com/16mfOT1.jpg"  class="img-responsive" alt="">
+                <div class="">
+                    <img src="https://imgur.com/16mfOT1.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
                    
                 </div>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <div class="portfolio-box">
-                    <img src="https://i.imgur.com/JIXdMeT.jpg"  class="img-responsive" alt="">
+                <div class="">
+                    <img src="https://i.imgur.com/JIXdMeT.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
                     
                 </div>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <div class="portfolio-box">
-                    <img src="https://i.imgur.com/Ef40en2.gif"  width="500" height="377" >
+                <div class="">
+                    <img src="https://i.imgur.com/Ef40en2.gif" oncontextmenu="return false;" width="500" height="377" >
                     
                 </div>
             </div>
             <div class="col-lg-4 col-sm-6">
                 <div class="portfolio-box video-container">
-                    <iframe src="https://www.youtube.com/embed/okVnp8Nt_UQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/okVnp8Nt_UQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen oncontextmenu="return false;"></iframe>
                    
                 </div>
             </div>
             
              <div class="col-lg-4 col-sm-6">
                 <div class="portfolio-box video-container">
-                    <iframe src="https://www.youtube.com/embed/XEiT_O3e0VM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/XEiT_O3e0VM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen oncontextmenu="return false;"></iframe>
                    
                 </div>
             </div>
             <div class="col-lg-4 col-sm-6">
                 <div class="portfolio-box video-container">
-                    <iframe src="https://www.youtube.com/embed/05UL1OHWOgc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/05UL1OHWOgc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen oncontextmenu="return false;"></iframe>
                    
                 </div>
             </div>
             <div class="col-lg-4 col-sm-6">
                 <div class="portfolio-box video-container">
-                    <iframe src="https://www.youtube.com/embed/lO0Ro34Efwk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/lO0Ro34Efwk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen oncontextmenu="return false;"></iframe>
                    
                 </div>
             </div>
             <div class="col-lg-4 col-sm-6">
                 <div class="portfolio-box video-container">
-                    <iframe src="https://www.youtube.com/embed/RFJM3z3_t_k" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/RFJM3z3_t_k" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen oncontextmenu="return false;"></iframe>
                    
                 </div>
             </div>
             <div class="col-lg-4 col-sm-6">
                 <div class="portfolio-box video-container">
-                    <iframe src="https://www.youtube.com/embed/nPhVGu1m13U" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/nPhVGu1m13U" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen oncontextmenu="return false;"></iframe>
                    
                 </div>
             </div>
             <div class="col-lg-4 col-sm-6">
                 <div class="portfolio-box video-container">
-                    <iframe src="https://www.youtube.com/embed/mw1pqbF2qSM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/mw1pqbF2qSM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen oncontextmenu="return false;"></iframe>
                    
                 </div>
             </div>
