--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -34,7 +34,7 @@
           
             <div class="col-lg-4 col-sm-6">
                 <div class="">
-                    <img src="https://i.imgur.com/neDE9IM.jpg" oncontextmenu="return false;" zclass="img-responsive" alt="">
+                    <img src="https://i.imgur.com/neDE9IM.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
                    
                 </div>
             </div>
