--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -2,58 +2,58 @@
     <div class="container-fluid">
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
-                <div class="">
+                <a href="#" class="portfolio-box">
                     <img src="https://imgur.com/6YzKkcz.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
                     
-                </div>
+                </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <div class="">
+                <a href="#" class="portfolio-box">
                     <img src="https://imgur.com/c32Kcq5.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
                     
-                </div>
+                </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <div class="">
+                <a href="#" class="portfolio-box">
                     <img src="https://imgur.com/8CQ54RG.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
                    
-                </div>
+                </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <div class="">
+                <a href="#" class="portfolio-box">
                     <img src="https://i.imgur.com/BVsbv2f.png" oncontextmenu="return false;" class="img-responsive" alt="">
                   
-                </div>
+                </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <div class="">
+                <a href="#" class="portfolio-box">
                     <img src="https://i.imgur.com/EzrB88Q.png" oncontextmenu="return false;" class="img-responsive" alt="">
                    
-                </div>
+                </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <div class="">
+                <a href="#" class="portfolio-box">
                     <img src="https://i.imgur.com/TBGZXOu.png" oncontextmenu="return false;" class="img-responsive" alt="">
                    
-                </div>
+                </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <div class="">
+                <a href="#" class="portfolio-box">
                     <img src="https://i.imgur.com/BwEUnfE.png" oncontextmenu="return false;" class="img-responsive" alt="">
                    
-                </div>
+                </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <div class="">
+                <a href="#" class="portfolio-box">
                     <img src="https://i.imgur.com/Ef40en2.gif" oncontextmenu="return false;" width="500" height="377" >
                     
-                </div>
+                </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <div class="">
+                <a href="#" class="portfolio-box">
                     <img src="https://i.imgur.com/zIx4sWq.png" oncontextmenu="return false;" class="img-responsive" alt="">
                     
-                </div>
+                </a>
             </div>
             <div class="col-lg-4 col-sm-6">
                 <div class="portfolio-box video-container">
@@ -99,10 +99,10 @@
                 </div>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <div class="">
+                <a href="#" class="portfolio-box">
                     <img src="https://i.imgur.com/IMFFbSv.jpg" oncontextmenu="return false;" class="img-responsive" alt="">
                    
-                </div>
+                </a>
             </div>
         </div>
     </div>
