--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -45,8 +45,8 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="https://i.imgur.com/Ef40en2.gif" oncontextmenu="return false;" width="500" height="377" >
-                    
+                    <img src="https://i.imgur.com/yFx3Qfq.gif" oncontextmenu="return false;" class="img-responsive" alt="">
+                   
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
@@ -61,8 +61,7 @@
                    
                 </div>
             </div>
-            
-             <div class="col-lg-4 col-sm-6">
+            <div class="col-lg-4 col-sm-6">
                 <div class="portfolio-box video-container">
                     <iframe src="https://www.youtube.com/embed/XEiT_O3e0VM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen oncontextmenu="return false;"></iframe>
                    
