--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -45,14 +45,14 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="https://i.imgur.com/yFx3Qfq.gif" oncontextmenu="return false;" class="img-responsive" alt="">
-                   
+                    <img src="https://i.imgur.com/zIx4sWq.png" oncontextmenu="return false;" class="img-responsive" alt="">
+                    
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="https://i.imgur.com/zIx4sWq.png" oncontextmenu="return false;" class="img-responsive" alt="">
-                    
+                    <img src="https://i.imgur.com/xWIMY7z.gif" oncontextmenu="return false;" class="img-responsive" alt="">
+                   
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
